<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg"
    android:gravity="center"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!--IMAGEN-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/jug"
            android:layout_marginTop="5dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/correoEt"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Clave-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/passEt"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/nombreEt"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--EDAD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edadET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/edadEt"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--PAIS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/paisEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/paisEt"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Fecha-->
        <TextView
            android:id="@+id/fechaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/fechaTxt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/zombie"
            android:text="@string/Regitrar"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>