<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:background="#A1FF34"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desarrolladoPorTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/zombie"
            android:gravity="center"
            android:text="@string/desarrolladoPorTxt"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/dev" />

        <TextView
            android:id="@+id/devTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/zombie"
            android:gravity="center"
            android:text="@string/devTxt"
            android:textColor="#673AB7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>