<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bd"
    tools:context=".EscenarioJuego">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--INFORMACION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--X y Y-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--X-->
                <TextView
                    android:id="@+id/AnchoTv"
                    android:text="@string/AnchoTv"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>
                <!--Y-->
                <TextView
                    android:id="@+id/AltoTv"
                    android:text="@string/AltoTv"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Contador-->
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="130dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TvContador"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/TvContador"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TvNombre"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TvTiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TvTiempo"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <!--Nombre-->

            <!--Animacion
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                app:lottie_fileName="tiempo.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"/>-->

            <!--Tiempo-->
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--INFORMACION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/TvZombie"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/z1" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>