<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/puntaje"
    android:gravity="center"
    tools:context=".CambiarContrasenia">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/formalogin"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="Cambio de Password"
            android:fontFamily="@font/zombie"
            android:textSize="20dp"
            android:textColor="#FF9800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/actualPass"
                android:hint="@string/actualPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nuevoPass"
                android:hint="@string/nuevoPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cambiarPass"
            android:text="@string/cambiarPass"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>